--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,8 @@ yarn-error.log*
 
 # Slither
 crytic-export/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
